--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "formik": "^2.4.3",
-    "next": "^14.1.1-canary.59",
+    "next": "^14.1.1-canary.80",
     "next-auth": "^4.23.0",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
@@ -62,6 +62,7 @@
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.1.2",
     "recharts": "^2.8.0",
+    "sharp": "^0.33.2",
     "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.3",
     "timeago.js": "^4.0.2",
