--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/body-parser": "^1.19.5",
     "@types/bonjour": "^3.5.13",
     "@types/connect-history-api-fallback": "^1.5.4",
+    "@types/eslint": "^8.56.4",
+    "@types/eslint-scope": "^3.7.7",
     "@types/express": "^4.17.21",
     "@types/graceful-fs": "^4.1.9",
     "@types/html-minifier-terser": "^7.0.2",
@@ -70,6 +72,7 @@
   },
   "devDependencies": {
     "@types/babel__core": "^7.20.5",
-    "@types/json-schema": "^7.0.15"
+    "@types/json-schema": "^7.0.15",
+    "eslint": "^8.57.0"
   }
 }
