--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "next": "^14.1.1-canary.80",
     "next-auth": "^4.23.0",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.27",
+    "postcss": "^8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
