--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "test": "jest",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "install": "npm install --omit=dev"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
