--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "jest",
     "start": "next start",
     "lint": "next lint",
-    "install": "npm install --omit=dev"
+    "install": "npm install"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
