--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "test": "jest",
     "start": "next start",
-    "lint": "next lint",
-    "install": "npm install"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
