--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bufferutil": "^4.0.7",
+    "eslint": "^8.57.0",
     "eslint-config-next": "13.4.13",
     "formik": "^2.4.3",
     "next": "^14.1.1-canary.80",
